--- a/01_getAndVisualize.Rmd
+++ b/01_getAndVisualize.Rmd
@@ -1,23 +1,29 @@
 ---
 title: ""
 author: "Duc-Quang Nguyen | swissinfo.ch"
-date: " 2016"
+date: " 2017"
 output: 
   html_document:
-    toc: true
+    code_folding: show
+    echo: TRUE
+    warning: FALSE
+    message: FALSE
+    toc: yes
     toc_depth: 3
     theme: simplex
 ---
 
 ```{r setup, include=FALSE}
-options(tibble.width = Inf)
+cleanOutput <- F
+
+require(lintr)
 library(tidyverse)
 library(magrittr)
+library(stringr)
 library(knitr)
 library(countrycode)
 library(swiMap)
 library(swiTheme)
-
 
 ### Getting data in packages
 library(rvest)
@@ -26,20 +32,42 @@ library(WDI)
 library(eurostat)
 library(imfr)
 
-
 ### Interactive 
 library(htmltools)
-library(shiny)
 library(swiRcharts)
 library(rCharts)
+library(highcharter)
 
 ### Mapping 
 # require(rgdal)
 # require(rgeos)
 # require(maptools)
 
-
 ### Misc stuff
 #require(classInt)
 #require(viridis)
+```
+
+
+```{r move production graphics}
+if (cleanOutput) {
+  files <- c("basename_.*html", "js")
+
+  if (!dir.exists("output/bak")) {
+    dir.create("output/bak")
+  } else {
+    list.files("output/bak/", full.names = T, recursive = T) %>% file.remove()
+  }
+  ori.files <- list.files("output", full.names = T)[list.files("output") != "bak"]
+  file.copy(ori.files, to = "output/bak/", recursive = T)
+  unlink(ori.files, recursive = T)
+
+  files_tomove <- lapply(files, function(x) list.files(pattern = x)) %>% unlist()
+  file.copy(files_tomove, "output", recursive = T)
+  unlink(files_tomove, recursive = T)
+}
+```
+
+```{r linting}
+lintr::lint(knitr::current_input())
 ```
