--- a/01_getAndVisualize.Rmd
+++ b/01_getAndVisualize.Rmd
@@ -1,7 +1,7 @@
 ---
 title: ""
 author: "Duc-Quang Nguyen | Tamedia"
-date: " 2020"
+date: " 2021"
 output: 
   html_document:
     code_folding: hide
@@ -39,8 +39,10 @@ library(eurostat)
 library(ggiraph)
 library(htmltools)
 library(highcharter)
-tamTheme::update_geom_font_defaults()
 
+tamTheme::update_geom_font_defaults()
+options(scipen=999)
+options(dplyr.summarise.inform = FALSE)
 ```
 
 
