--- a/Script/01_getAndVisualize.Rmd
+++ b/Script/01_getAndVisualize.Rmd
@@ -1,6 +1,6 @@
 ---
 title: ""
-author: "Duc-Quang Nguyen | Tamedia"
+author: "Duc-Quang Nguyen | Le Temps"
 date: " 2021"
 output: 
   html_document:
@@ -15,7 +15,6 @@ output:
 ---
 
 ```{r setup, include=FALSE}
-
 library(here)
 library(tidyverse)
 library(magrittr)
@@ -23,8 +22,7 @@ library(stringr)
 library(knitr)
 library(sf)
 library(tamMap)
-library(tamTheme)
-library(hrbrthemes)
+library(dqnTheme)
 library(skimr)
 library(paletteer)
 
@@ -40,7 +38,7 @@ library(ggiraph)
 library(htmltools)
 library(highcharter)
 
-tamTheme::update_geom_font_defaults()
+dqnTheme::update_geom_font_defaults()
 options(scipen=999)
 options(dplyr.summarise.inform = FALSE)
 ```
