--- a/Script/01_getAndVisualize.Rmd
+++ b/Script/01_getAndVisualize.Rmd
@@ -24,16 +24,13 @@ library(sf)
 library(tamMap)
 library(dqnTheme)
 library(skimr)
-library(paletteer)
 
 ### Getting data in packages
-library(secret)
-library(rvest)
+library(countrycode)
 library(readxl)
-library(WDI)
-library(eurostat)
 
-### Interactive 
+### Interactive
+library(DatawRappr)
 library(ggiraph)
 library(htmltools)
 library(highcharter)
@@ -41,6 +38,9 @@ library(highcharter)
 dqnTheme::update_geom_font_defaults()
 options(scipen=999)
 options(dplyr.summarise.inform = FALSE)
+
+dw_key <- "vY8MIJtcYvJj0MwHQ50O9D8zvHDQZIydPeo0QUtyhnyga5ks2dp58uak9dRrjSRw"
+
 ```
 
 ```{r load}
