--- a/Script/01_getAndVisualize.Rmd
+++ b/Script/01_getAndVisualize.Rmd
@@ -1,7 +1,7 @@
 ---
 title: ""
 author: "Duc-Quang Nguyen | Le Temps"
-date: " 2023"
+date: " 2024"
 output: 
   html_document:
     code_folding: hide
@@ -17,7 +17,32 @@ output:
 
 
 ```{r load}
+library(here)
+library(tidyverse)
+library(magrittr)
+library(stringr)
+library(knitr)
+library(sf)
+library(tamMap)
+library(dqnTheme)
+library(skimr)
 
+### Getting data in packages
+library(countrycode)
+library(readxl)
+
+### Interactive
+library(DatawRappr)
+library(ggiraph)
+library(htmltools)
+library(highcharter)
+
+Sys.setlocale("LC_TIME", "fr_FR.UTF-8")
+dqnTheme::update_geom_font_defaults()
+options(scipen=999)
+options(dplyr.summarise.inform = FALSE)
+
+dw_key <- "vY8MIJtcYvJj0MwHQ50O9D8zvHDQZIydPeo0QUtyhnyga5ks2dp58uak9dRrjSRw"
 ```
 
 
